make seo for find out web

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bangol || Food</title>
+
+    <title>Anik Confectionary Rajnagar || Bengali Fast Food in Moulvibazar</title>
+
+    <!-- ✅ SEO Meta Tags -->
+    <meta name="google-site-verification" content="2kZrlYzGHjMINf7VUVkxLw1SSllaFNxE-RBWwOL5LhY" />
+    <meta name="description" content="Anik confectionary - Bangol Food -  সমুচা,সিংকারা,সবজি রোল,পিজ্জা,আইস্ক্রিম, রোল, কেক ও আরও অনেক কিছু।" />
+    <meta name="keywords" content="bengol food,anik confectionary,anik food,fast food, bengali food,online food order rajnagar,rajnagar bangol food, traditional food, bangladeshi food, online food order,অনিক কনফেকশনারী,অনিক ফুড,ফাস্ট ফুড,রাজনগর বেজ্ঞল, বাঙালি খাবার, খাবার দোকান" />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Anik Confectionary Team" />
+    <link rel="canonical" href="https://bengol-food.web.app/" />
+
+    <!-- ✅ Open Graph for better sharing on social media -->
+    <meta property="og:title" content="Anik Confectionary Bangol Food || বাঙালি খাবারের স্বাদ" />
+    <meta property="og:description" content="ঘরে বসেই অর্ডার করুন বাঙালি ঐতিহ্যবাহী খাবার। ডেলিভারি সহ বিশ্বস্ততার নিশ্চয়তা।" />
+    <meta property="og:image" content="https://bengol-food.web.app/cover.jpg" />
+    <meta property="og:url" content="https://bengol-food.web.app/" />
+    <meta property="og:type" content="website" />
+
   </head>
   <body>
     <div id="root"></div>
